--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Note: This is a class project and is no longer being developed.
+
 Author: John Beckingham (@Tyler1232321)
 Student ID: <redacted>
 Author: Hai Yang Xu (@jspenguin2017)
